@@ -50,6 +50,7 @@ class LineSegment : public SpannerSegment {
       virtual bool edit(ScoreView*, int grip, int key, Qt::KeyboardModifiers, const QString& s);
       virtual void updateGrips(int*, QRectF*) const;
       virtual void setGrip(int grip, const QPointF& p);
+      virtual QPointF getGrip(int) const;
       virtual QPointF gripAnchor(int) const;
       virtual void layout() {}
 
